--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -32,7 +32,7 @@
       <div class="col-md-6" id="paragraph">
             <p><span id="dropcap1">A</span>s you sit in the terminal waiting for your plane to board, you are overcome by the smell of delicious food and the sounds of a live band local to Austin. Yes, a live band in a terminal, and yes, local to Austin.</p>
 
-<p>You look around the terminal and see interactive maps that help you navigate the airport with more ease. You can see all of the construction that is taking part outside of the airport and inside the terminal. It is becoming apparent that the long walkway of the terminal has become more crowded, and the list of arrivals and departures are continuing to grow. This is no longer the small regional-fell airport Austin has had over the past couple of decades. This is the new and improved ABIA.  </p>
+<p>You look around the terminal and see interactive maps that help you navigate the airport with more ease. You can see all of the construction that is taking part outside of the airport and inside the terminal. It is becoming apparent that the long walkway of the terminal has become more crowded, and the list of arrivals and departures are continuing to grow. This is no longer the small regional-fell airport Austin has had over the past couple of decades. This is the new and improved ABIA.</p>
 
 <p>These changes Austin Bergstrom International Airport (ABIA) is making to improve the overall customer experience for its passengers have been happening for the last five years. This comes with the massive growth the airport has seen in the 20 years of its operations and its quick rise to becoming a major airport in the U.S.</p>
 
@@ -46,46 +46,22 @@
 
 <p>Williams said that is the airport continues on its current growth trend, and it could potentially be the size of Dallas-Fort Worth International Airport (DFW) in the next 20 years. After the completion of the Master Plan, the airport should be able to handle the 32 million annual passengers that are forecasted.</p>
 
-<p>While this may not be a shocking thing to airport officials, it does shock people of Austin. For some, the thought of having the airport become a major hub is something hard to believe. Some even find it hard to believe how large the operations are now.</p>
 
-<p>But how uncommon is for a city with less than a million people to have a major airport? Surprisingly, it is not uncommon at all. Some of the largest airports in the country are in cities with less than a million people. Some of those include Seattle, Salt Lake City, St. Louis, Kansas City, Nashville, Minneapolis and Tampa.</p>
-
-<p>Nashville (BNA), Tampa (TPA) and Salt Lake City (SLC) are the airports the at ABIA is looking at when it comes to inspiration according to Williams. BNA and TPA currently serve around the same amount as ABIA and SLC serves nearly 30 million, which is the airport that ABIA looks to for inspiration for the future.</p>
-
-<p>Airports such as Seattle (SEA), Minneapolis (MSP) and Kansas City (MCI) are also airports that are located in cities that have less than a million people. The ratio of population to passengers SEA sees is # to # while MSP is # to #.</p>
-
-<p>So why is this? What makes this the cause for the majority of these cities? While there may be a number of reasons, one may be because of the locations. The majority of these cities are in locations where they are the only major city to serve a large portion of individuals. SEA is the only major airport in Washington; therefore, the amount of people they serve is very high. The same kind of concept is seen in SLC, with the closest major city being Denver, which is roughly 525 miles.</p>
-
-<p>The distance between cities in Texas is much less than what some cities see but is still an important concept. There are significant areas that focus on one area. For ABIA's case, it is the Central Texas market.</p>
-
-<p>"Our market for Austin ranges from Waco all the way to south San Antonio," Williams said. "The majority of our passengers come from over 22 counties, which of course includes the San Antonio and Waco area."</p>
       </div>
       <div class="col-md-6" id="paragraph">
-        <p>The importance of making the airport at the top of its game is extremely important for every airport, but especially for smaller airports. Airports such as SEA, MSP and SLC have been around for years, and even have airlines that focus on those cities. ABIA has no airline focus, so they have to make the airport more enjoyable.
+        <p>While this may not be a shocking thing to airport officials, it does shock people of Austin. For some, the thought of having the airport become a major hub is something hard to believe. Some even find it hard to believe how large the operations are now.</p>
 
-<p>Nashville (BNA) is also starting to make some of these changes. Both of these airports are wanting to bring in the spirit of their cities. BNA has announced preliminary sketches and design ideas for the airport. ABIA has actually enforced some of those.</p>
+        <p>But how uncommon is for a city with less than a million people to have a major airport? Surprisingly, it is not uncommon at all. Some of the largest airports in the country are in cities with less than a million people. Some of those include Seattle, Salt Lake City, St. Louis, Kansas City, Nashville, Minneapolis and Tampa.</p>
 
-<p>When you walk into the airport, the first thing you here is local music playing over the loudspeakers, which is sponsored by an Austin radio station. Everywhere you go, you hear local Austin artists. Another quality aspect they bring in is the addition of live local music. Several restaurants will have musicians playing for their guests. </p>
+        <p>Nashville (BNA), Tampa (TPA) and Salt Lake City (SLC) are the airports the at ABIA is looking at when it comes to inspiration according to Williams. BNA and TPA currently serve around the same amount as ABIA and SLC serves nearly 30 million, which is the airport that ABIA looks to for inspiration for the future.</p>
 
-<p>The restaurants the musicians are playing in are even local to Austin. The majority of the restaurants are local Austin hop spots, and they even sell local Austin craft beer and cocktails. </p>
+        <p>Airports such as Seattle (SEA), Minneapolis (MSP) and Kansas City (MCI) are also airports that are located in cities that have less than a million people. The ratio of population to passengers SEA sees is # to # while MSP is # to #.</p>
 
-<p>"It's fun for us to bring that Live Music Capital of the world into the airport," Williams said. "It's what we are known for. The other thing is food. The food is phenomenal in Austin, so why wouldn't you bring that into an airport?"</p>
+        <p>So why is this? What makes this the cause for the majority of these cities? While there may be a number of reasons, one may be because of the locations. The majority of these cities are in locations where they are the only major city to serve a large portion of individuals. SEA is the only major airport in Washington; therefore, the amount of people they serve is very high. The same kind of concept is seen in SLC, with the closest major city being Denver, which is roughly 525 miles.</p>
 
-<p>But as they continue to grow, will this be something they can continue to do? Williams says yes, and no. Keeping the Austin culture is important and is something they will continue to implement. Just as important as it is to bring in local aspects, bringing in more chain options are also important. </p>
+        <p>The distance between cities in Texas is much less than what some cities see but is still an important concept. There are significant areas that focus on one area. For ABIA's case, it is the Central Texas market.</p>
 
-<p>ABIA is no longer going to be the small regional airport it once was. As the expansion continues, the number of people traveling through will also increase. It will be crucial to keep in mind not everyone will know local Austin products, so to ensure all passengers are comfortable there will have to be at least some chain restaurants. </p>
-
-<p>When the airline market is pretty dominant and established, it may be hard for other airports to try and grow. Although it may be difficult, there are ways to grow. There is also no need to be in a major metropolitan area to have high passenger totals. It is all in the strategy. </p>
-
-<p>Austin was once a small quiet town but has now turned into a busy and fast-building city. The airport has been one of the businesses in the city that has really felt the growth. When the airport first started service in 1999, it was designed to serve nearly 11 million annual passengers, and in 2018 they were serving nearly 15.8 million. </p>
-
-<p>With the completion of the 2040 Master Plan, ABIA is forecasted to served nearly 32 million annual passengers. If they continue their growth, that may even push 50 or 60 million.</p>
-
-<p>After sitting in the gate for two hours and analyzing everything about the airport, it is time to board your flight. As walk down the jet bridge, the sounds of Austin slightly fade away, and the smell of barbeque turns into the typical airplane smell. You were just relaxed in the terminal, and now you have no idea how you will feel on the plane. </p>
-
-<p>Airports are always changing and looking for ways to improve the overall experience for customers, so stop and think about what they have done. Are they truly a small airport and are starting to experience explosive growth? Maybe soon more airports in the country will begin to implement more city feels into their city.</p>
-
-<p>But for now, just enjoy your small seat, cold(ish) coke and a few small peanuts.</p>
+        <p>"Our market for Austin ranges from Waco all the way to south San Antonio," Williams said. "The majority of our passengers come from over 22 counties, which of course includes the San Antonio and Waco area."</p>
 
         </div>
       </div>
@@ -105,6 +81,37 @@
 
         </div>
       </div>
+
+      <div class="row">
+            <div class="col-md-6" id="paragraph">
+              <p>The importance of making the airport at the top of its game is extremely important for every airport, but especially for smaller airports. Airports such as SEA, MSP and SLC have been around for years, and even have airlines that focus on those cities. ABIA has no airline focus, so they have to make the airport more enjoyable.
+
+      <p>Nashville (BNA) is also starting to make some of these changes. Both of these airports are wanting to bring in the spirit of their cities. BNA has announced preliminary sketches and design ideas for the airport. ABIA has actually enforced some of those.</p>
+
+      <p>When you walk into the airport, the first thing you here is local music playing over the loudspeakers, which is sponsored by an Austin radio station. Everywhere you go, you hear local Austin artists. Another quality aspect they bring in is the addition of live local music. Several restaurants will have musicians playing for their guests. </p>
+
+      <p>The restaurants the musicians are playing in are even local to Austin. The majority of the restaurants are local Austin hop spots, and they even sell local Austin craft beer and cocktails. </p>
+
+      <p>"It's fun for us to bring that Live Music Capital of the world into the airport," Williams said. "It's what we are known for. The other thing is food. The food is phenomenal in Austin, so why wouldn't you bring that into an airport?"</p>
+
+      <p>But as they continue to grow, will this be something they can continue to do? Williams says yes, and no. Keeping the Austin culture is important and is something they will continue to implement. Just as important as it is to bring in local aspects, bringing in more chain options are also important. </p>
+            </div>
+            <div class="col-md-6" id="paragraph">
+              <p>ABIA is no longer going to be the small regional airport it once was. As the expansion continues, the number of people traveling through will also increase. It will be crucial to keep in mind not everyone will know local Austin products, so to ensure all passengers are comfortable there will have to be at least some chain restaurants. </p>
+
+              <p>When the airline market is pretty dominant and established, it may be hard for other airports to try and grow. Although it may be difficult, there are ways to grow. There is also no need to be in a major metropolitan area to have high passenger totals. It is all in the strategy. </p>
+
+              <p>Austin was once a small quiet town but has now turned into a busy and fast-building city. The airport has been one of the businesses in the city that has really felt the growth. When the airport first started service in 1999, it was designed to serve nearly 11 million annual passengers, and in 2018 they were serving nearly 15.8 million. </p>
+
+              <p>With the completion of the 2040 Master Plan, ABIA is forecasted to served nearly 32 million annual passengers. If they continue their growth, that may even push 50 or 60 million.</p>
+
+              <p>After sitting in the gate for two hours and analyzing everything about the airport, it is time to board your flight. As walk down the jet bridge, the sounds of Austin slightly fade away, and the smell of barbeque turns into the typical airplane smell. You were just relaxed in the terminal, and now you have no idea how you will feel on the plane. </p>
+
+              <p>Airports are always changing and looking for ways to improve the overall experience for customers, so stop and think about what they have done. Are they truly a small airport and are starting to experience explosive growth? Maybe soon more airports in the country will begin to implement more city feels into their city.</p>
+
+              <p>But for now, just enjoy your small seat, cold(ish) coke and a few small peanuts.</p>
+              </div>
+            </div>
 
             <div class="row">
               <div class="col-md">
