--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -22,8 +22,8 @@
         <h3>Forrest Logan Self</h3>
       </div>
       <div class="col-md-6">
-        <img src="departurehall.png">
-        <h6>This is an example of a caption.</h6>
+        <img src="departurehall.png" alt="High res photo of the new deapture hall">
+        <h6>ABIA Departure Hall after the 2040 Master Plan.</h6>
       </div>
 
 
@@ -35,6 +35,8 @@
 <p>You look around the terminal and see interactive maps that help you navigate the airport with more ease. You can see all of the construction that is taking part outside of the airport and inside the terminal. It is becoming apparent that the long walkway of the terminal has become more crowded, and the list of arrivals and departures are continuing to grow. This is no longer the small regional-fell airport Austin has had over the past couple of decades. This is the new and improved ABIA.</p>
 
 <p>These changes Austin Bergstrom International Airport (ABIA) is making to improve the overall customer experience for its passengers have been happening for the last five years. This comes with the massive growth the airport has seen in the 20 years of its operations and its quick rise to becoming a major airport in the U.S.</p>
+<img src="nightview.jpg" alt="Night view of the completed Master Plan">
+<h6>The complete airfield of ABIA after the 2040 Master Plan.</h6>
 
 <p>When ABIA started operations in 1999, it was planned to handle 11 million annual passengers. At the end of 2018, it was recorded that the airport serviced nearly 16 million annual passengers. Over the years, ABIA has had to scramble to make changes that could accommodate the large number of passengers.</p>
 
@@ -42,13 +44,12 @@
 
 <p>"Over the last 5 years we have grown at 9.5% growth, so even in the last 5 to 6 years we have had a huge increase in growth in a very short period of time."</p>
 
-<p>With this begin said, it is clear that the pressure to improve the infrastructure of the airport is a top priority, but it is also something that is going to take time. At the beginning of 2019, ABIA opened its 9-gate expansion of their main terminal. This is one of the first significant changes that will soon be accompanied by the addition of 32 gates that are planned for the airport's 2040 Master Plan.</p>
-
-<p>Williams said that is the airport continues on its current growth trend, and it could potentially be the size of Dallas-Fort Worth International Airport (DFW) in the next 20 years. After the completion of the Master Plan, the airport should be able to handle the 32 million annual passengers that are forecasted.</p>
-
 
       </div>
       <div class="col-md-6" id="paragraph">
+        <p>With this begin said, it is clear that the pressure to improve the infrastructure of the airport is a top priority, but it is also something that is going to take time. At the beginning of 2019, ABIA opened its 9-gate expansion of their main terminal. This is one of the first significant changes that will soon be accompanied by the addition of 32 gates that are planned for the airport's 2040 Master Plan.</p>
+
+        <p>Williams said that is the airport continues on its current growth trend, and it could potentially be the size of Dallas-Fort Worth International Airport (DFW) in the next 20 years. After the completion of the Master Plan, the airport should be able to handle the 32 million annual passengers that are forecasted.</p>
         <p>While this may not be a shocking thing to airport officials, it does shock people of Austin. For some, the thought of having the airport become a major hub is something hard to believe. Some even find it hard to believe how large the operations are now.</p>
 
         <p>But how uncommon is for a city with less than a million people to have a major airport? Surprisingly, it is not uncommon at all. Some of the largest airports in the country are in cities with less than a million people. Some of those include Seattle, Salt Lake City, St. Louis, Kansas City, Nashville, Minneapolis and Tampa.</p>
@@ -89,16 +90,23 @@
       <p>Nashville (BNA) is also starting to make some of these changes. Both of these airports are wanting to bring in the spirit of their cities. BNA has announced preliminary sketches and design ideas for the airport. ABIA has actually enforced some of those.</p>
 
       <p>When you walk into the airport, the first thing you here is local music playing over the loudspeakers, which is sponsored by an Austin radio station. Everywhere you go, you hear local Austin artists. Another quality aspect they bring in is the addition of live local music. Several restaurants will have musicians playing for their guests. </p>
-
+      <img src="food.JPG" alt="Some of the current food options in the terminal"/>
+      <h6>The current food options in the Terminal.</h6>
+      <img src="music.jpg" alt="A shot of a band playing at one of the stages" />
+      <h6>One of the music stages located in the terminal.</h6>
       <p>The restaurants the musicians are playing in are even local to Austin. The majority of the restaurants are local Austin hop spots, and they even sell local Austin craft beer and cocktails. </p>
 
-      <p>"It's fun for us to bring that Live Music Capital of the world into the airport," Williams said. "It's what we are known for. The other thing is food. The food is phenomenal in Austin, so why wouldn't you bring that into an airport?"</p>
 
-      <p>But as they continue to grow, will this be something they can continue to do? Williams says yes, and no. Keeping the Austin culture is important and is something they will continue to implement. Just as important as it is to bring in local aspects, bringing in more chain options are also important. </p>
-
-        <p>ABIA is no longer going to be the small regional airport it once was. As the expansion continues, the number of people traveling through will also increase. It will be crucial to keep in mind not everyone will know local Austin products, so to ensure all passengers are comfortable there will have to be at least some chain restaurants. </p>
             </div>
             <div class="col-md-6" id="paragraph">
+
+              <p>"It's fun for us to bring that Live Music Capital of the world into the airport," Williams said. "It's what we are known for. The other thing is food. The food is phenomenal in Austin, so why wouldn't you bring that into an airport?"</p>
+
+              <p>But as they continue to grow, will this be something they can continue to do? Williams says yes, and no. Keeping the Austin culture is important and is something they will continue to implement. Just as important as it is to bring in local aspects, bringing in more chain options are also important. </p>
+
+
+
+                <p>ABIA is no longer going to be the small regional airport it once was. As the expansion continues, the number of people traveling through will also increase. It will be crucial to keep in mind not everyone will know local Austin products, so to ensure all passengers are comfortable there will have to be at least some chain restaurants. </p>
 
 
               <p>When the airline market is pretty dominant and established, it may be hard for other airports to try and grow. Although it may be difficult, there are ways to grow. There is also no need to be in a major metropolitan area to have high passenger totals. It is all in the strategy. </p>
